<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tituloMain"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/titulo"
        android:textStyle="bold"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputNombre"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="236dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textSize="@dimen/textInput"
            android:inputType="textLongMessage"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaNacimiento"
        android:textSize="@dimen/textInput"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputTelefono"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="236dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:textSize="@dimen/textInput"
            android:inputType="textLongMessage"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="236dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="@dimen/textInput"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDescripcion"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="236dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:textSize="@dimen/textInput"
            android:inputType="textLongMessage"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonSiguiente"
        android:layout_gravity="end"
        android:background="@color/colorAccent"/>


</LinearLayout>